css/main.css
/* ... */
/*///// BACKGROUND ANIMATIONS /////*/
    #container{
        position: fixed;
        width: 100%;
        height: 100%;
        opacity: .2;
        filter: alpha(opacity=20);
    }

    #bgsWrapper{
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        right: 0;
        z-index: 0;
        overflow: hidden;
    }

    .layer {
        position: absolute;
        width: 200vw;
        height: 100vh;
    }

    .innerLayer{
        position: absolute;
        width: 200vw;
        height: 200vh;
    }

    .stars1{
        background-image: url(../img/bg/lucky-stars.svg);
        background-size: 50%;
        background-repeat: repeat;

        -webkit-transition: all 2.4s ease;
           -moz-transition: all 2.4s ease;
            -ms-transition: all 2.4s ease;
             -o-transition: all 2.4s ease;
                transition: all 2.4s ease;
        
    }

    .stars2{
        background-image: url(../img/bg/lucky-stars-1.svg);
        background-size: 50%;
        background-repeat: repeat;

        -webkit-transition: all 2.8s ease;
           -moz-transition: all 2.8s ease;
            -ms-transition: all 2.8s ease;
             -o-transition: all 2.8s ease;
                transition: all 2.8s ease;
    }
    .stars3{
        background-image: url(../img/bg/lucky-stars-2.svg);
        background-size: 33.33%;
        background-repeat: repeat;

        -webkit-transition: all 3.4s ease;
           -moz-transition: all 3.4s ease;
            -ms-transition: all 3.4s ease;
             -o-transition: all 3.4s ease;
                transition: all 3.4s ease;
    }
/*///// END BACKGROUND ANIMATIONS /////*/


/* /// MASTER WRAPPER ///*/
    #fullWrapper{
        position: absolute;
        width: 100%;
        height: 100%;
        margin: 0;
        background-color: #fff;
        color: #0f1f27;
        text-decoration: none;
    }

        #fullWrapper nav{
            position: absolute;
            width: 70px;
            height: 118px;
            margin: auto;
            top: 0;
            left: 50px;
            cursor: pointer;
            background-color: #E6545F;
        }
            #fullWrapper nav img{
                width: 100%;
            }


        /* CENTER QUOTES STYLE */
            #centerQuotes{
                position: absolute;
                width: 80%;
                height: 1.5em;
                font-size: 4em;
                margin: auto;
                top: 0; bottom: 0; left: 0; right: 0;
                /*border: 1px solid aqua;*/
            }
                #centerQuotes .quotes, #centerQuotes .specialQuote{
                    display: block;
                    margin: 0;
                    line-height: 1em;
                    text-align: center;
                    cursor: pointer;
                }
                    #centerQuotes .quotes .boldie{
                        font-weight: 700 !important;
                        color: #E6545F;
                    }
                        #centerQuotes .quotes .boldie a{
                            color: #E6545F;
                        }

                    #centerQuotes input{
                        text-align: center;
                        -webkit-transition: all .3s ease-in-out;
                           -moz-transition: all .3s ease-in-out;
                            -ms-transition: all .3s ease-in-out;
                             -o-transition: all .3s ease-in-out;
                                transition: all .3s ease-in-out;
                    }
                #centerQuotes .firstQuote{
                    display: block;
                    margin: 0;
                    line-height: 1em;
                    text-align: center;
                }
                #centerQuotes .hiddenQuote{
                    display: none;
                }

                #centerQuotes h1, #centerQuotes div{
                    font-size: 20px;
                    font-weight: 500;
                    opacity: 1;

                    -webkit-transition: all .3s ease-in-out;
                       -moz-transition: all .3s ease-in-out;
                        -ms-transition: all .3s ease-in-out;
                         -o-transition: all .3s ease-in-out;
                            transition: all .3s ease-in-out;
                }
                #centerQuotes h1:hover, #centerQuotes div:hover{
                    opacity: .9;
                }

                    #centerQuotes .quoteOptionsBox{
                        position: relative;
                        display: inline-block;
                        vertical-align: top;
                        zoom: 1; /* Fix for IE7 */
                        *display: inline; /* Fix for IE7 */
                        width: 100%;
                        height: 2em;
                        line-height: 2em;   
                        top: 1em;
                    }
                        #centerQuotes .quoteOptionsBox .optionsBox{
                            position: relative;
                            display: inline-block;
                            vertical-align: top;
                            zoom: 1; /* Fix for IE7 */
                            *display: inline; /* Fix for IE7 */
                            float: left;
                            cursor: pointer;
                        }
                        #centerQuotes .quoteOptionsBox .threeOptionsBox{
                            width: 33.33%;
                            height: 100%;
                        }
/* ... */

